5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1582_1330.log
== TEST (2019-03-12 21:22:49) 
-- CODE:
round (41,6)
-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:22:53) 
-- CODE:
round (41,6)
-- EXECUTION TIME:
0.198243
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:23:02) 
-- CODE:
round (41,6667)
-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:23:05) 
-- CODE:
round (41,6667)
-- EXECUTION TIME:
0.152328
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:23:58) 
-- CODE:
round (41.6)
-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:24:00) 
-- CODE:
round (41.6)
-- EXECUTION TIME:
0.126485
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:24:12) 
-- CODE:
round (41.6666667)
-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:24:15) 
-- CODE:
round (41.6666667)
-- EXECUTION TIME:
0.183836
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:24:42) 
-- CODE:
round (41.66)
-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:24:45) 
-- CODE:
round (41.66)
-- EXECUTION TIME:
0.29074
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:24:54) 
-- CODE:
round (41,66)
-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:24:56) 
-- CODE:
round (41,66)
-- EXECUTION TIME:
0.161056
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:25:47) 
-- CODE:
print (42)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:25:50) 
-- CODE:
print (42)
-- EXECUTION TIME:
0.138716
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:26:02) 
-- CODE:
print (41,66)
-- OUTPUT:
41 66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:26:04) 
-- CODE:
print (41,66)
-- EXECUTION TIME:
0.195979
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:26:05) 
-- CODE:
print (41,66)
-- EXECUTION TIME:
0.151956
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:26:07) 
-- CODE:
print (41,66)
-- EXECUTION TIME:
0.158233
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:26:13) 
-- CODE:
print (41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:26:15) 
-- CODE:
print (41.66)
-- EXECUTION TIME:
0.163643
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:26:18) 
-- CODE:
print (41.66)
-- EXECUTION TIME:
0.135465
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:26:40) 
-- CODE:
round(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:26:43) 
-- CODE:
round(41.66)
-- EXECUTION TIME:
0.198565
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:27:42) 
-- CODE:
round(41.67)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:27:44) 
-- CODE:
round(41.67)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:27:46) 
-- CODE:
round(41.67)
-- EXECUTION TIME:
0.16492
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:28:42) 
-- CODE:
round(41,66)
print(42)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:28:45) 
-- CODE:
round(41,66)
print(42)
-- EXECUTION TIME:
0.181306
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:29:01) 
-- CODE:
round(41.66)
print(42)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:29:03) 
-- CODE:
round(41.66)
print(42)
-- EXECUTION TIME:
0.133527
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:29:13) 
-- CODE:
round(41.66)
print(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:29:16) 
-- CODE:
round(41.66)
print(41.66)
-- EXECUTION TIME:
0.153574
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:29:22) 
-- CODE:
round(41.66)
print(41.66)
-- EXECUTION TIME:
0.220858
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:29:22) 
-- CODE:
round(41.66)
print(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:29:24) 
-- CODE:
round(41.66)
print(41.66)
-- EXECUTION TIME:
0.191795
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:29:24) 
-- CODE:
round(41.66)
print(41.66)
-- EXECUTION TIME:
0.13784
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:29:49) 
-- CODE:
round(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:29:50) 
-- CODE:
round(41.66)
-- EXECUTION TIME:
0.151263
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:29:51) 
-- CODE:
round(41.66)
-- EXECUTION TIME:
0.128711
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:29:52) 
-- CODE:
round(41.66)
-- EXECUTION TIME:
0.104803
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:30:21) 
-- CODE:
round(41.66)
print(42.00)
-- OUTPUT:
42.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:30:23) 
-- CODE:
round(41.66)
print(42.00)
-- EXECUTION TIME:
0.118588
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:30:42) 
-- CODE:
round(41.67)
print(42)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:30:45) 
-- CODE:
round(41.67)
print(42)
-- EXECUTION TIME:
0.221128
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:33:21) 
-- CODE:
round(250/6)
print(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:33:24) 
-- CODE:
round(250/6)
print(41.66)
-- EXECUTION TIME:
0.152157
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:33:38) 
-- CODE:
round(250/6)
print(41.6666667)
-- OUTPUT:
41.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:33:40) 
-- CODE:
round(250/6)
print(41.6666667)
-- EXECUTION TIME:
0.186935
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:35:25) 
-- CODE:
round(41.66)

-- OUTPUT:
41.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:35:26) 
-- CODE:
round(41.66)

-- EXECUTION TIME:
0.159889
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:35:27) 
-- CODE:
round(41.66)

-- EXECUTION TIME:
0.116973
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:35:45) 
-- CODE:
round(41.66)
round(42)

-- OUTPUT:
41.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:35:47) 
-- CODE:
round(41.66)
round(42)

-- EXECUTION TIME:
0.198889
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:37:26) 
-- CODE:
round(41.66,44)
print(42)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:37:30) 
-- CODE:
round(41.66,44)
print(42)
-- EXECUTION TIME:
0.147246
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:38:04) 
-- CODE:
round(41.66,44)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:38:06) 
-- CODE:
round(41.66,44)
-- EXECUTION TIME:
0.146554
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:56:30) 
-- CODE:
round	(250 / 6)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:56:32) 
-- CODE:
round	(250 / 6)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:56:50) 
-- CODE:
round	(250/6)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:56:52) 
-- CODE:
round	(250/6)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:57:24) 
-- CODE:
print (250 / 6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:57:26) 
-- CODE:
print (250 / 6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:57:27) 
-- CODE:
print (250 / 6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:57:27) 
-- CODE:
print (250 / 6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:57:27) 
-- CODE:
print (250 / 6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:57:27) 
-- CODE:
print (250 / 6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:57:27) 
-- CODE:
print (250 / 6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:57:31) 
-- CODE:
print (250 / 6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:57:32) 
-- CODE:
print (250 / 6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:58:29) 
-- CODE:
print (250 / 6)
print (round 41.66,44)
-- ERROR:
File "XXXX", line 2
    print (round 41.66,44)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:58:38) 
-- CODE:
print (250 / 6)
print (round 41.66)
-- ERROR:
File "XXXX", line 2
    print (round 41.66)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:59:14) 
-- CODE:
print (250 / 6)
round (41.66,44)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:59:48) 
-- CODE:
print (250 / 6)
print (41.66)
-- OUTPUT:
41.666666666666664
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:59:52) 
-- CODE:
print (250 / 6)
print (41.66)
-- EXECUTION TIME:
0.237951
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:00:07) 
-- CODE:
print (250 / 6)
print (41.6666664)
-- OUTPUT:
41.666666666666664
41.6666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:00:11) 
-- CODE:
print (250 / 6)
print (41.6666664)
-- OUTPUT:
41.666666666666664
41.6666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:00:54) 
-- CODE:
print (250 / 6)
print (41.666666666666664)
-- OUTPUT:
41.666666666666664
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:00:57) 
-- CODE:
print (250 / 6)
print (41.666666666666664)
-- EXECUTION TIME:
0.135584
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:01:09) 
-- CODE:
print (250 / 6)
print (41.64)
-- OUTPUT:
41.666666666666664
41.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:01:11) 
-- CODE:
print (250 / 6)
print (41.64)
-- EXECUTION TIME:
0.147158
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:02:29) 
-- CODE:
print (250 / 6)
round (41.66,44)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:20:27) 
-- CODE:
print (250 / 6)
round (41.6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:20:31) 
-- CODE:
print (250 / 6)
round (41.6)

-- EXECUTION TIME:
0.186095
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:24:41) 
-- CODE:
print (41.50 round (41.66)

-- ERROR:
File "XXXX", line 1
    print (41.50 round (41.66)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:24:44) 
-- CODE:
print (41.50 round (41.66)

-- EXECUTION TIME:
0.21512
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    print (41.50 round (41.66)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:24:46) 
-- CODE:
print (41.50 round (41.66)

-- EXECUTION TIME:
0.148915
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    print (41.50 round (41.66)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:27:57) 
-- CODE:
print(250 / 6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:28:59) 
-- CODE:
print(250 / 6)
round (41.666666666666664)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:29:08) 
-- CODE:
print(250 / 6)
round (41.66)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:29:34) 
-- CODE:
print(250 / 6)
round (41.66)
print (42)

-- OUTPUT:
41.666666666666664
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:29:37) 
-- CODE:
print(250 / 6)
round (41.66)
print (42)

-- EXECUTION TIME:
0.147108
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:29:40) 
-- CODE:
print(250 / 6)
round (41.66)
print (42)

-- EXECUTION TIME:
0.157774
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:29:48) 
-- CODE:
print(250 / 6)
round (41.66)
print (41)

-- OUTPUT:
41.666666666666664
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:29:50) 
-- CODE:
print(250 / 6)
round (41.66)
print (41)

-- EXECUTION TIME:
0.213903
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:30:04) 
-- CODE:
print(250 / 6)
round (41.66)
print (41.5)

-- OUTPUT:
41.666666666666664
41.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:30:06) 
-- CODE:
print(250 / 6)
round (41.66)
print (41.5)

-- EXECUTION TIME:
0.134976
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:30:09) 
-- CODE:
print(250 / 6)
round (41.66)
print (41.5)

-- EXECUTION TIME:
0.178768
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:30:19) 
-- CODE:
print(250 / 6)
round (41.66)
print (41.50)

-- OUTPUT:
41.666666666666664
41.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:30:21) 
-- CODE:
print(250 / 6)
round (41.66)
print (41.50)

-- EXECUTION TIME:
0.171134
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:30:22) 
-- CODE:
print(250 / 6)
round (41.66)
print (41.50)

-- EXECUTION TIME:
0.170871
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:30:35) 
-- CODE:
print(250 / 6)
round (41.64)
print (41.50)

-- OUTPUT:
41.666666666666664
41.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:30:36) 
-- CODE:
print(250 / 6)
round (41.64)
print (41.50)

-- EXECUTION TIME:
0.188042
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:30:37) 
-- CODE:
print(250 / 6)
round (41.64)
print (41.50)

-- EXECUTION TIME:
0.302775
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:30:54) 
-- CODE:
print(250 / 6)
round (41.64)
41.50

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:30:57) 
-- CODE:
print(250 / 6)
round (41.64)
41.50

-- EXECUTION TIME:
0.209149
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:31:34) 
-- CODE:
print(250 / 6)
print (42(round (41.64))


-- ERROR:
File "XXXX", line 4
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:31:37) 
-- CODE:
print(250 / 6)
print (42(round (41.64))


-- EXECUTION TIME:
0.177864
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 4
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:32:10) 
-- CODE:
print(250 / 6)
print (42round(41.66))
-- ERROR:
File "XXXX", line 2
    print (42round(41.66))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:32:13) 
-- CODE:
print(250 / 6)
print (42round(41.66))
-- EXECUTION TIME:
0.210266
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    print (42round(41.66))
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:32:29) 
-- CODE:
print(250 / 6)
print (41.50round(41.66))
-- ERROR:
File "XXXX", line 2
    print (41.50round(41.66))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:32:32) 
-- CODE:
print(250 / 6)
print (41.50round(41.66))
-- EXECUTION TIME:
0.186829
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    print (41.50round(41.66))
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:32:44) 
-- CODE:
round(41.66)
-- ERROR:
File "XXXX", line 2
    print (41.50round(41.66))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:32:55) 
-- CODE:
round(41.66)
-- ERROR:
File "XXXX", line 2
    print (41.50round(41.66))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:19:11) 
-- CODE:
round(41.66,2)
-- ERROR:
File "XXXX", line 2
    print (41.50round(41.66))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:19:19) 
-- CODE:
round(41.66,2)
-- EXECUTION TIME:
0.177926
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:19:38) 
-- CODE:
(round(41.66,2))
-- ERROR:
File "XXXX", line 2
    print (41.50round(41.66))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:20:04) 
-- CODE:
(print (round(41.66,2))
-- ERROR:
File "XXXX", line 2
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:20:06) 
-- CODE:
(print (round(41.66,2))
-- EXECUTION TIME:
0.186576
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    
                           ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:20:12) 
-- CODE:
(print(round(41.66,2))
-- EXECUTION TIME:
0.251635
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    
                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:20:13) 
-- CODE:
(print(round(41.66,2))
-- ERROR:
File "XXXX", line 2
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:20:15) 
-- CODE:
(print(round(41.66,2))
-- EXECUTION TIME:
0.253551
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    
                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:21:41) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:22:57) 
-- CODE:
print(250/6)
print(round 41.666666666666664,2)
-- ERROR:
File "XXXX", line 2
    print(round 41.666666666666664,2)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:22:59) 
-- CODE:
print(250/6)
print(round 41.666666666666664,2)
-- EXECUTION TIME:
0.141533
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    print(round 41.666666666666664,2)
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:23:20) 
-- CODE:
print(250/6)
(print(round 41.666666666666664,2))
-- ERROR:
File "XXXX", line 2
    (print(round 41.666666666666664,2))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:23:23) 
-- CODE:
print(250/6)
(print(round 41.666666666666664,2))
-- EXECUTION TIME:
0.205262
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    (print(round 41.666666666666664,2))
                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:23:32) 
-- CODE:
print(250/6)
(print(round 41.64,2))
-- ERROR:
File "XXXX", line 2
    (print(round 41.64,2))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:23:40) 
-- CODE:
print(250/6)
print(round 41.64,2)
-- ERROR:
File "XXXX", line 2
    print(round 41.64,2)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:24:12) 
-- CODE:
print(250/6)
round 41.64,2
-- ERROR:
File "XXXX", line 2
    round 41.64,2
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:24:27) 
-- CODE:
print(250/6)
round (41.64,2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:24:33) 
-- CODE:
print(250/6)
round (41.64,2)
-- EXECUTION TIME:
0.164272
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:24:39) 
-- CODE:
print(250/6)
round (41.64,2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:25:01) 
-- CODE:
print(250/6)
print (round (41.64,2))
-- OUTPUT:
41.666666666666664
41.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:25:05) 
-- CODE:
print(250/6)
print (round (41.64,2))
-- EXECUTION TIME:
0.149388
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:25:55) 
-- CODE:
print(250/6)
round(41.66 , 2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:25:55) 
-- CODE:
print(250/6)
round(41.66 , 2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:25:57) 
-- CODE:
print(250/6)
round(41.66 , 2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:25:59) 
-- CODE:
print(250/6)
round(41.66 , 2)
-- EXECUTION TIME:
0.194991
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:26:10) 
-- CODE:
print(250/6)
round(41.66,2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:26:11) 
-- CODE:
print(250/6)
round(41.66,2)
-- EXECUTION TIME:
0.149122
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:27:33) 
-- CODE:
print(250/6)
print(round(41.66,2))
-- OUTPUT:
41.666666666666664
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:27:48) 
-- CODE:
print(250/6)
print(round(41.66 ,2))
-- OUTPUT:
41.666666666666664
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:27:57) 
-- CODE:
print(250/6)
print(round(41.66,2))
-- EXECUTION TIME:
0.129828
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:28:18) 
-- CODE:
print(250/6)
print(round(41.6666667,2))
-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:28:21) 
-- CODE:
print(250/6)
print(round(41.6666667,2))
-- EXECUTION TIME:
0.126276
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:28:40) 
-- CODE:
print(250/6)
print(round(41.6666667,2))
print(41.67)
-- EXECUTION TIME:
0.167181
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.67
41.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:28:42) 
-- CODE:
print(250/6)
print(round(41.6666667,2))
print(41.67)
-- OUTPUT:
41.666666666666664
41.67
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:28:44) 
-- CODE:
print(250/6)
print(round(41.6666667,2))
print(41.67)
-- EXECUTION TIME:
0.172557
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.67
41.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:29:07) 
-- CODE:
print(250/6)
print(round(41.666666666666664,2))
print(41.64)
-- OUTPUT:
41.666666666666664
41.67
41.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:29:18) 
-- CODE:
print(250/6)
print(round(41.666666666666664,2))
print(41.67)
-- EXECUTION TIME:
0.186284
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.67
41.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:29:19) 
-- CODE:
print(250/6)
print(round(41.666666666666664,2))
print(41.67)
-- EXECUTION TIME:
0.156338
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.67
41.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:29:20) 
-- CODE:
print(250/6)
print(round(41.666666666666664,2))
print(41.67)
-- OUTPUT:
41.666666666666664
41.67
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:29:31) 
-- CODE:
print(250/6)
print(round(41.666666666666664,2))
-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:29:33) 
-- CODE:
print(250/6)
print(round(41.666666666666664,2))
-- EXECUTION TIME:
0.219601
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:32:46) 
-- CODE:
print(250/6)
print(round(41.64,2))
-- OUTPUT:
41.666666666666664
41.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:32:49) 
-- CODE:
print(250/6)
print(round(41.64,2))
-- EXECUTION TIME:
0.154798
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:33:51) 
-- CODE:
print(250/6)
print(round(41.64,4))
-- OUTPUT:
41.666666666666664
41.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:33:53) 
-- CODE:
print(250/6)
print(round(41.64,4))
-- EXECUTION TIME:
0.139557
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:34:39) 
-- CODE:
print(250/6)
print(round(41.66,2))
-- OUTPUT:
41.666666666666664
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:34:54) 
-- CODE:
print(250/6)
print(round(41.66,22))
-- OUTPUT:
41.666666666666664
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:35:09) 
-- CODE:
print(250/6)
(round(41.66,2)
-- ERROR:
File "XXXX", line 3
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:43:42) 
-- CODE:
print(250/6)
>>>round(41.66,2)
-- ERROR:
File "XXXX", line 2
    >>>round(41.66,2)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:43:59) 
-- CODE:
print(250/6)
round(41.66,2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:44:47) 
-- CODE:
print(250/6)
round(250 / 6,2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:45:04) 
-- CODE:
round(250 / 6,2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:45:20) 
-- CODE:
round(250/6 , 2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:46:26) 
-- CODE:
print(250/6,2)
-- OUTPUT:
41.666666666666664 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:46:28) 
-- CODE:
print(250/6,2)
-- EXECUTION TIME:
0.191025
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:46:39) 
-- CODE:
print(250/6 , 2)
-- OUTPUT:
41.666666666666664 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:46:41) 
-- CODE:
print(250/6 , 2)
-- EXECUTION TIME:
0.176129
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:46:45) 
-- CODE:
print(250/6 ,2)
-- OUTPUT:
41.666666666666664 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:46:50) 
-- CODE:
print(250/6,2)
-- OUTPUT:
41.666666666666664 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:47:04) 
-- CODE:
print(250/6,2)
-- EXECUTION TIME:
0.14103
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:48:42) 
-- CODE:
round(250/6,2)
-- OUTPUT:
41.666666666666664 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:48:44) 
-- CODE:
round(250/6,2)
-- EXECUTION TIME:
0.142009
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:48:47) 
-- CODE:
round (250/6,2)
-- EXECUTION TIME:
0.18139
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:48:48) 
-- CODE:
round (250/6,2)
-- OUTPUT:
41.666666666666664 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:48:55) 
-- CODE:
round (250/6 ,2)
-- OUTPUT:
41.666666666666664 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:48:57) 
-- CODE:
round (250/6 ,2)
-- OUTPUT:
41.666666666666664 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:48:58) 
-- CODE:
round (250/6 ,2)
-- EXECUTION TIME:
0.13793
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:49:11) 
-- CODE:
print ( round (250/6 ,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:49:14) 
-- CODE:
print ( round (250/6 ,2))
-- EXECUTION TIME:
0.194863
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:06:35) 
-- CODE:
print ( round (250/6 ,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:06:36) 
-- CODE:
print ( round (250/6 ,2))
-- EXECUTION TIME:
0.133216
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
